--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 byteorder = "1.4.3"
+crossbeam-channel = "0.5.8"
 libusb1-sys = "0.6.4"
 static_assertions = "1.1.0"
