--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ anyhow = "1.0.71"
 byteorder = "1.4.3"
 crossbeam-channel = "0.5.8"
 libusb1-sys = "0.6.4"
+portable-pty = "0.8.1"
 static_assertions = "1.1.0"
